# jetson-doback

./: CMakeLists.txt  build.sh  detect_lidar.py  install_dependencies.sh
include/: camera_reader.h  data_synchronizer.h  lidar_reader.h
lidar_camera_fusion/: CMakeLists.txt  README.md  config.json  process_data.py
lidar_camera_fusion/include/: lidar_reader.h
lidar_camera_fusion/src/: camera_reader.cpp
python_lidar_camera/: README.md  lidar_camera_fusion.py  process_data.py
src/: data_synchronizer.cpp  detect_lidar.cpp  lidar_reader.cpp  main.cpp
